fixed: pulldown select radiobuttons/checkboxes no aligned properly, https://github.com/kobotoolbox/enketo-express/issues/274

--- a/src/sass/formhub/_radiocheck.scss
+++ b/src/sass/formhub/_radiocheck.scss
@@ -181,3 +181,17 @@ $line-h: 20px;
         }
     }
 }
+
+.bootstrap-select .dropdown-toggle ~ .dropdown-menu {
+    @include option-padding(left);
+}
+
+.or[dir="rtl"] .bootstrap-select .dropdown-toggle ~ .dropdown-menu {
+    @include option-padding(right);
+    .option-wrapper {
+        padding-right: 5px;
+    }
+    .option-label {
+        margin-right: 0;
+    }
+}
